--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -8,75 +8,74 @@
     android:orientation="vertical"
     tools:context=".Login_Activity">
 
+
     <ImageView
         android:layout_width="150dp"
         android:layout_height="140dp"
-        android:src="@drawable/logo" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/usuario" />
-
-    <TextView
-        android:layout_width="177dp"
-        android:layout_height="40dp"
+        android:src="@drawable/logo"
         android:layout_marginTop="10dp"
-        android:text="Usuario:"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="30sp" />
+        android:layout_marginLeft="20dp"/>
 
     <LinearLayout
-        android:layout_width="350dp"
+        android:layout_width="352dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:background="#fff"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/caixatexto"
+        android:gravity="center"
         android:orientation="vertical"
+        android:backgroundTint="#790F6A7B"
         >
 
-        <EditText
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:inputType="textEmailAddress" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/usuario"
+            android:layout_marginBottom="30dp"/>
 
-    </LinearLayout>
 
-    <TextView
-        android:layout_width="177dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="30dp"
-        android:text="Senha:"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="30sp" />
 
-    <LinearLayout
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:background="#fff"
-        android:orientation="vertical">
 
         <EditText
             android:layout_width="300dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
-            android:inputType="textPassword" />
+            android:background="@drawable/caixatexto"
+            android:inputType="textEmailAddress"
+            android:padding="10dp"
+            android:layout_margin="20dp"
+            android:backgroundTint="#fff"
+            android:hint="Usuário"
+            android:drawableRight="@drawable/ic_person"/>
+
+
+        <EditText
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:inputType="textPassword"
+            android:background="@drawable/caixatexto"
+            android:layout_margin="20dp"
+            android:backgroundTint="#fff"
+            android:hint="Senha"
+            android:padding="10dp"
+            android:drawableRight="@drawable/ic_lock"/>
+
+        <Button
+            android:layout_width="199dp"
+            android:layout_height="59dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/caixatexto"
+            android:backgroundTint="#fff"
+            android:text="Entar"
+            android:textSize="15dp"
+            android:textAllCaps="false"
+            android:drawableBottom="@drawable/ic_send"/>
+
     </LinearLayout>
-
-    <Button
-        android:layout_width="130dp"
-        android:layout_height="70dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:text="Entar"
-        android:textSize="15dp" />
-
 
 </LinearLayout>
 
